--- a/tomorrow_web/src/main/webapp/application.css
+++ b/tomorrow_web/src/main/webapp/application.css
@@ -34,12 +34,12 @@ hr {
 }
 
 .image-logo{
-	margin-top: 10px;
+	margin-top: 2px;
 	margin-left: 10px;
 }
 
 .search-filter-textbox{
-	margin-top: 30px;
+	margin-top: 22px;
 }
 
 .datagrid th{
@@ -49,7 +49,10 @@ hr {
 	border-color: red;
 }
 
-
+input[title]:HOVER:AFTER{
+	font-size: 15px;
+	color: red;
+}
 
 /**
  * The file contains styles for GWT widgets in the Clean theme.
@@ -95,6 +98,7 @@ select {
   background: white;
 }
 
+
 /**
  * The reference theme can be used to determine when this style sheet has
  * loaded.  Create a hidden div element with absolute position, assign the style
@@ -108,7 +112,6 @@ select {
 }
 
 .gwt-Button {
-  margin: 0;
   padding: 5px 7px;
   text-decoration: none;
   cursor: pointer;
@@ -139,7 +142,6 @@ select {
 }
 
 .gwt-Button-blue{ 
-  margin: 0;
   padding: 5px 7px;
   text-decoration: none;
   cursor: pointer;
