--- a/tomorrow_web/src/main/webapp/application.css
+++ b/tomorrow_web/src/main/webapp/application.css
@@ -54,6 +54,14 @@ input[title]:HOVER:AFTER{
 	color: red;
 }
 
+table th {
+	border-bottom : 1px solid #E5E5E5;
+}
+
+table tr {
+	border-bottom : 1px solid #E5E5E5;
+}
+
 /**
  * The file contains styles for GWT widgets in the Clean theme.
  *
